--- a/_includes/template/browse-js.html
+++ b/_includes/template/browse-js.html
@@ -36,11 +36,11 @@ function makeCard(obj) {
     var card = '<div class="card mb-3"><div class="row no-gutters"><div class="col-md-4 p-3">';
     // top image for items with image
     if(imgSrc) {
-        card += '<a href="' + itemHref + '"> <img class="img-fluid lazyload" src="' + placeholder + '" data-src="' + imgSrc + '" alt="' + imgAlt + '"</a>';
+        card += '<a target="_blank" rel="noopener" href="' + itemHref + '"> <img class="img-fluid lazyload" src="' + placeholder + '" data-src="' + imgSrc + '" alt="' + imgAlt + '"</a>';
     }
     
     // title
-    card += '</div><div class="col-md-8"><div class="card-body"> <h3 class="card-title h3 fw-bold mb-4"><a href="' + itemHref + '" class="text-dark">' + obj.title + '</a></h3>';
+    card += '</div><div class="col-md-8"><div class="card-body"> <h3 class="card-title h3 fw-bold mb-4"><a target="_blank" rel="noopener" href="' + itemHref + '" class="text-dark">' + obj.title + '</a></h3>';
     // other fields
     card += '<p class="card-text">';
     {% for f in fields %}{% unless f.hidden == 'true' %}
@@ -61,7 +61,7 @@ function makeCard(obj) {
     {% endunless %}{% endfor %}
     card += '</p>';
     // view button
-    card += '<hr><a href="' + itemHref + '" class="btn btn-sm btn-outline-pride-gold" title="link to ' + obj.title + '">View Feature</a>';
+    card += '<hr><a target="_blank" rel="noopener" href="' + itemHref + '" class="btn btn-sm btn-outline-pride-gold" title="link to ' + obj.title + '">View Feature</a>';
     // close divs
     card += '</div></div></div></div>';
     // send back big string
