change browse link label

--- a/_includes/template/browse-js.html
+++ b/_includes/template/browse-js.html
@@ -61,7 +61,7 @@ function makeCard(obj) {
     {% endunless %}{% endfor %}
     card += '</p>';
     // view button
-    card += '<hr><a target="_blank" rel="noopener" href="' + itemHref + '" class="btn btn-sm btn-outline-pride-gold" title="link to ' + obj.title + '">View Feature</a>';
+    card += '<hr><a target="_blank" rel="noopener" href="' + itemHref + '" class="btn btn-sm btn-outline-pride-gold" title="link to ' + obj.title + '">View Resource</a>';
     // close divs
     card += '</div></div></div></div>';
     // send back big string
