--- a/_layouts/sidebar.html
+++ b/_layouts/sidebar.html
@@ -2,6 +2,11 @@
 # pages with sidebar nav 
 layout: default
 ---
+
+<style>
+  red { color: red }
+  </style>
+
 <div id="breadcrumb-header" class="py-2 border-bottom">
     <div class="container-xxl d-flex align-items-center">
 
